# actenon-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  GOVERNANCE.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  VERSIONING.md  ecosystem.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  link-check.yml  publish-ts-runtime.yml  publish-ts-types.yml  publish.yml  version-drift.yml
canonicalisation/: ACTENON-JCS-STRICT-1.md
conformance/: README.md  RUNNER_SPEC.md  generate_vectors.py  runner.py
conformance/python/: conformance_suite.py
conformance/vectors/: README.md
conformance/vectors/canonicalisation/invalid/: deeply_nested_exceeds_limit.json  duplicate_keys.json  float_deep_nested.json  float_exponent.json  float_in_array.json  float_in_object.json  float_infinity.json  float_nan.json  float_neg_infinity.json  float_top_level.json  float_zero.json  non_string_key.json  oversized_structure.json  unsupported_type_bytes.json  unsupported_type_set.json
conformance/vectors/canonicalisation/valid/: absent_field.json  absent_vs_null.json  action_parameters_payment_refund.json  array_preserves_order.json  array_reordering_differs.json  boolean_values.json  control_chars_escaped.json  deeply_nested_valid.json  empty_collections.json  escaped_vs_unescaped_equivalent.json  integer_boundary.json  integer_values.json  key_order_byte_vs_codepoint.json  negative_zero_not_applicable.json  nested_object.json  null_value.json  reordered_keys_same_bytes.json  simple_object.json  string_with_quotes_and_backslashes.json  unicode_normalization_none.json  unicode_strings.json  visually_similar_strings.json
conformance/vectors/execution-mode/: brokered_proof_accepted_by_brokered_verifier.v1.json  brokered_proof_refused_by_resource_owned_verifier.v1.json  resource_owned_proof_accepted_by_resource_owned_verifier.v1.json  resource_owned_proof_refused_by_brokered_verifier.v1.json
conformance/vectors/execution-mode/valid/: brokered_mode_explicit.v1.json  brokered_result_has_brokered_fields.v1.json  brokered_result_missing_provider_response.v1.json  mode_must_be_explicit.v1.json  mode_must_be_string.v1.json  resource_owned_mode_explicit.v1.json  resource_owned_result_has_resource_fields.v1.json  resource_owned_result_missing_resource_signature.v1.json  submitted_is_non_final.v1.json  succeeded_is_final.v1.json
conformance/vectors/execution-result/invalid/: brokered_succeeded_without_observation.v1.json  mixed_mode_fields.v1.json  resource_owned_submitted_marked_final.v1.json  resource_owned_succeeded_with_forged_receipt.v1.json
conformance/vectors/execution-result/valid/: brokered_outcome_unknown.v1.json  brokered_succeeded.v1.json  resource_owned_submitted.v1.json  resource_owned_succeeded.v1.json
conformance/vectors/proof/invalid/: approval_prefix_proof_id.v1.json  invalid_execution_mode.v1.json  invalid_proof_id_prefix.v1.json  issuer_no_key_discovery.v1.json  missing_action_hash.v1.json  missing_action_type.v1.json  missing_execution_mode.v1.json  missing_issuer.v1.json  missing_proof_id.v1.json  missing_required_field_proof_id.v1.json  missing_signature.v1.json  policy_prefix_proof_id.v1.json  unsupported_canonicalisation.v1.json  unsupported_canonicalisation_profile.v1.json  unsupported_protocol_version.v1.json  user_prefix_proof_id.v1.json
conformance/vectors/proof/valid/: action_access_control.v1.json  action_communication.v1.json  action_data_destruction.v1.json  action_data_export.v1.json  action_deployment.v1.json  empty_parameters.v1.json  long_expiry_window.v1.json  minimal_brokered.v1.json  minimal_resource_owned.v1.json  nested_parameters.v1.json  short_expiry_window.v1.json  unicode_parameters.v1.json  with_approval_artefact.v1.json  with_evidence_links.v1.json  with_well_known_key_discovery.v1.json
conformance/vectors/receipt/invalid/: invalid_outcome.v1.json  missing_action.v1.json  missing_executed_at.v1.json  missing_execution_mode.v1.json  missing_outcome.v1.json  missing_proof_id.v1.json  (+2 more)
identifiers/: prefixes.v1.yaml
openapi/: components.yaml
protocol/: 00-versioning.md  01-identifiers.md  02-canonicalisation.md  03-execution-modes.md  04-claim-names.md  05-proof.md  06-receipt.md  07-refusal.md  08-outcome-codes.md  09-issuer-metadata.md  10-evidence-linkage.md  11-disclosure-policy.md  12-execution-results.md  README.md
python/actenon_protocol/: __init__.py  _compat.py  canonicalisation.py  conformance_canonicalisation.py  ecosystem.py  execution_modes.py  execution_results.py  identifiers.py  outcome_codes.py  refusal_codes.py  version.py
python/actenon_protocol/data/: _common.v1.json  catalogue.v1.json  catalogue.v1.yaml  evidence_link.v1.json  issuer_metadata.v1.json
python/actenon_protocol/types/: __init__.py  common.py  evidence.py  intent.py  issuer.py  proof.py  receipt.py  refusal.py
schemas/: authorised_execution_intent.v1.json  boundary_manifest.v1.json  execution_proof.v1.json  execution_receipt.v1.json  execution_refusal.v1.json  execution_result.v1.json
scripts/: check_readme_installs.py  compile_yaml_to_json.py  generate_canonical_vectors.py  sync_badges.py
typescript/: package.json  tsconfig.json
typescript-runtime/: package.json  tsconfig.json
typescript-runtime/src/: canonicalisation.ts  index.ts
typescript-runtime/tests/: conformance.ts
typescript/src/: canonicalisation.ts  execution-modes.ts  identifiers.ts  index.ts  outcome-codes.ts  refusal-codes.ts  types.ts  version.ts
typescript/tests/: conformance.test.ts  conformance.ts
(+45 files in other folders)
