[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actenon-protocol"
version = "1.1.0"
description = "Neutral, open, implementation-independent boundary contract for the Actenon ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Actenon Ltd" }]
keywords = ["security", "authorization", "proof", "execution", "boundary", "protocol"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core runtime dependencies: NONE.
# The runtime package (canonicalisation, identifiers, refusal-code catalogue,
# version, outcome codes, execution modes, execution results) uses only the
# Python standard library. Pydantic types, YAML loading, and conformance-
# suite tooling are gated behind optional extras so that adopters who only
# need the wire contract pay no dependency cost.
dependencies = []

[project.optional-dependencies]
# Pydantic types mirroring the JSON Schemas (actenon_protocol.types).
# Optional: install if you want typed Python models for the protocol shapes.
types = [
  "pydantic>=2.5,<3",
]
# Direct YAML loading of the refusal-code catalogue.
# Optional: the runtime package uses a pre-compiled JSON catalogue by default;
# install this extra only if you need to load the YAML source directly.
yaml = [
  "pyyaml>=6.0,<7",
]
# Conformance suite tooling (jsonschema for vector validation, rfc8785 for
# cross-implementation canonicalisation comparison).
# Optional: install if you are running the protocol conformance runner.
conformance = [
  "jsonschema>=4.23,<5",
  "rfc8785>=0.1.4,<1",
]
# Convenience meta-extra: pull in everything.
all = [
  "actenon-protocol[types]",
  "actenon-protocol[yaml]",
  "actenon-protocol[conformance]",
]
dev = [
  "actenon-protocol[all]",
  "pytest>=8.0",
  "ruff>=0.8",
  "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/Actenon/actenon-protocol"
Repository = "https://github.com/Actenon/actenon-protocol"
Issues = "https://github.com/Actenon/actenon-protocol/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["actenon_protocol*"]

[tool.setuptools.package-data]
"actenon_protocol" = ["py.typed", "data/*.yaml", "data/*.json"]
"actenon_protocol.types" = ["py.typed"]

# CI must run `scripts/compile_yaml_to_json.py --check` to verify the
# pre-compiled JSON catalogue is in sync with the YAML source. This is
# what makes the "zero runtime dependencies" claim machine-verified.

[tool.pytest.ini_options]
testpaths = ["conformance/python"]
addopts = "-v --tb=short"
pythonpath = ["python"]
# Conformance suite is named conformance_suite.py (not test_*.py) — collect it explicitly.
python_files = ["test_*.py", "*_test.py", "conformance_suite.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",  # line length handled by formatter
]
